# truv-mcp-server

./: .dockerignore  .gitignore  README.md  auth.py  client_storage.py  pyproject.toml  server.py  truv.py
docker/: Dockerfile
