[project]
name = "truv-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.4.0",
    "mcp[cli]>=1.9.3",
    "requests>=2.32.4",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "fastapi>=0.115.13",
]
